// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`catchRevalidateError should handle revalidation error 1`] = `
Array [
  Array [
    "Could not revalidate entityId: %s with cache key: %s
",
    "entityId",
    "entryKey",
    [Error: test],
  ],
]
`;

exports[`catchRevalidateError should log errors when clearing flags fail 1`] = `
Array [
  Array [
    "Could not revalidate entityId: %s with cache key: %s
",
    "entityId",
    "entryKey",
    [Error: test],
  ],
  Array [
    "Error while clearing revalidation flags for cache key: %s",
    "entryKey",
    [Error: revalidation],
  ],
]
`;

exports[`revalidateEntry should log at debug level start and success 1`] = `
Array [
  Array [
    "Revalidating entityId: %s with cache key: %s",
    "model:Foo",
    "entryKey",
  ],
  Array [
    "Resolve entryKey: %s with entityId: %s",
    "entryKey",
    "model:Foo",
  ],
]
`;

exports[`revalidateSuccess should remove local flag and add debug log 1`] = `
Array [
  Array [
    "Succesful revalidation entityId: %s with cache key: %s",
    "entityId",
    "entryKey",
  ],
]
`;

exports[`updateSWREntry should add stale entry 1`] = `
Array [
  Array [
    "Updating cache key: %s with new stale value",
    "entryKey",
  ],
]
`;
